--- a/navigationbar1.html
+++ b/navigationbar1.html
@@ -3,7 +3,7 @@
 <head>
     <title>vigneshkanna navigation bar1</title>
      <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link rel="stylesheet" type="text/css" href="sample1.css">
+    <link rel="stylesheet" type="text/css" href="navigationbar1.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
 </head>
 <body>
